--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.spigotmc.......</groupId>
+            <artifactId>spigot</artifactId>
+            <version>1.19.4-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>net.minecraft</groupId>
             <artifactId>1.19</artifactId>
             <version>1.0</version>
